[package]
name = "ssb-slp-encoding"
version = "0.1.0"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
description = "Shallow Length Prefixed binary encoding byte arrays"
repository = "https://github.com/pietgeursen/ssb-slp-rs"
documentation = "https://docs.rs/ssb-slp-encoding/"
keywords = ["ssb", "scuttlebutt"]


[dependencies]
bytes = "0.5.6"
snafu = "0.6.9"
